[package]
name = "xsz"
version = "0.3.2"
edition = "2024"

[dependencies]
async-task = "4.7.1"
futures-lite = "2.6.0"
kanal = { version = "0.1.0", features = [ "std-mutex" ] }
mimalloc = "0.1.44"
nohash = "0.2.0"
palc = "0.0.2"
rustix = { version = "1.0.3", features = [ "fs" ] }

[[bin]]
name = "xsz"
[[bin]]
name = "xfrag"

[profile]
[profile.dev.package."*"]
opt-level = "s"
debug = 0
[profile.release]
opt-level = "s"
codegen-units = 1
debug = 0
lto = "fat"
strip = "symbols"
panic = "abort"
